Changes in @VERSION@:
  o Bug Fix:
    * Conary now removes sources from the lookaside before unpacking SRPMs to
      ensure that the source referenced from the SRPM is actually contained in
      the SRPM. (CNY-771)

  o Build Changes:
    * Conary no longer prints policy error messages three times; it
      now prints each error immediately when it is found, and then
      summarizes all policy errors once (instead of twice) at the
      end of the build process. (CNY-776)

Changes in 1.0.28:
  o Client Changes:
    * Migrate no longer replaces by default as if --replace-files was
      specified. (CNY-769)

  o Server Changes:
    * The log retrieval function now returns a HTTP_NOT_IMPLEMENTED
      (501) instead of a HTTP_NOT_FOUND (404) if the logFile
      directive is not configured.

  o Build Changes:
    * Conary now recognizes that pkgconfig finds its files in
      /usr/share/pkgconfig as well as /usr/lib*/pkgconfig. (CNY-754)
    * /etc/conary/mirrors/cran has been added to enable mirror://
      references to the Comprehensive R Archive Network. (CNY-761)

  o Bug Fixes:
    * Conary now resets the timeStamps in all cases when
      getSourceVersion is called (CNY-708).
    * SQLite ANALYZE locks the database after it is run, causing
      updates to fail.
    * A bug that caused lists such as installLabelPath in
      configuration files to be parsed incorrectly when more than one
      space was between list elements has been fixed
    * A bug that caused Locally changed files to no be marked properly
      in rollbacks that were stored locally (including rollbacks for
      locally built troves) has been fixed. (CNY-645)
    * A bug that could cause "cvc cook" to create groups that include
      components needed to resolve dependencies that are already
      included not-by-default has been fixed.

Changes in 1.0.27:
  o Client Changes:
    * A "files preupdate" tag script method has been Implemented which